--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Debug Environment
+        run: |
+            echo "AWS Region: us-east-1"  # Change this to your configured region if necessary
+            echo "AWS Access Key ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
+
       - name: Terraform Init
         run: terraform init
 
